# animx

./: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/base_test/: main.cpp
